# HE_pub

./: .gitignore  LICENSE  README-English.md  README.md
1-NoEncryption-multiplication/: main.cpp  matrix.hpp  run1.sh
2-OpenMP-NoEncryption-multiplication/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp  run2.sh
3-SEAL-multiplication/: CMakeLists.txt  build-encrypted.sh  main.cpp  matrix.cpp  run3.sh
4-OpenMP-SEAL-multiplication/: main.cpp  matrix.cpp  run4.sh
5-NoEncryption-convolution/: build-unencrypted.sh  main.cpp  matrix.cpp  matrix.hpp  run5.sh
6-OpenMP-NoEncryption-convolution/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp  run6.sh
7-SEAL-convolution/: main.cpp  matrix.cpp  matrix.hpp  run7.sh
8-OpenMP-SEAL-convolution/: main.cpp  matrix.cpp  matrix.hpp  run8.sh
NoEncryption-convolution/: CMakeLists.txt
NoEncryption-multiplication/: CMakeLists.txt
OpenMP-SEAL-convolution/: CMakeLists.txt
OpenMP-SEAL-multiplication/: CMakeLists.txt
SEAL-convolution/: CMakeLists.txt
